--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -353,7 +353,7 @@
     <string name="swapping_swap">Обмен</string>
     <string name="swapping_swap_action">Обменять</string>
     <string name="swapping_swap_of_to">Обмен %s на</string>
-    <string name="swapping_tangem_fee_disclaimer">Кроме того, котировки включают комиссию Tangem в размере %s. Это помогает нам предоставлять первоклассный продукт.</string>
+    <string name="swapping_tangem_fee_disclaimer">Котировки включают дополнительную комиссию Tangem в размере %s. Это помогает нам предоставлять первоклассный продукт.</string>
     <string name="swapping_token_list_other_tokens">Другие токены</string>
     <string name="swapping_token_list_title">Выберите токен</string>
     <string name="swapping_token_list_your_tokens">Ваши токены</string>
