--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -129,7 +129,7 @@
     <string name="initial_message_change_passcode_body">Чтобы изменить пароль, приложите карту как показано выше и не убирайте до окончания операции</string>
     <string name="initial_message_create_wallet_body">Чтобы создать кошелек, приложите карту как показано выше и не убирайте до окончания операции</string>
     <string name="initial_message_scan_header">Приложите, чтобы отсканировать</string>
-    <string name="initial_message_sign_header">Нажмите, чтобы подписать</string>
+    <string name="initial_message_sign_header">Приложите, чтобы подписать</string>
     <string name="initial_message_tap_header">Приложите карту</string>
     <string name="internal_error_wallet_manager_not_found">Внутренняя ошибка: не удается найти менеджер кошельков</string>
     <string name="key_invalidated_warning_description">Вы обновили данные биометрии, отсканируйте свою карту для входа</string>
