--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -308,10 +308,10 @@
     <string name="onboarding_wallet_info_title_fourth">Восстановление кода доступа</string>
     <string name="onboarding_wallet_info_title_second">Идентичные карты</string>
     <string name="onboarding_wallet_info_title_third">Код доступа</string>
-    <string name="organize_tokens_group">Группировка</string>
+    <string name="organize_tokens_group">Группы</string>
     <string name="organize_tokens_sort_by_balance">По балансу</string>
     <string name="organize_tokens_title">Сортировка токенов</string>
-    <string name="organize_tokens_ungroup">Разгруппировать</string>
+    <string name="organize_tokens_ungroup">Список</string>
     <string name="receive_bottom_sheet_title">%1$s %2$s адрес в сети %3$s</string>
     <string name="receive_bottom_sheet_warning_message">%1$s (%2$s) в сети %3$s</string>
     <string name="referral_button_participate">Участвовать</string>
