--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -569,10 +569,13 @@
     <string name="warning_button_ok">Понятно!</string>
     <string name="warning_button_really_cool">Очень круто!</string>
     <string name="warning_existential_deposit_message">Сеть %1$s использует концепцию экзистенциального депозита. Если баланс вашего счета опустится ниже %2$s, он будет деактивирован, а все оставшиеся средства будут уничтожены.</string>
+    <string name="warning_existential_deposit_title">Для работы с сетью необходим депозит.</string>
     <string name="warning_failed_to_verify_card_message">Эта карта может быть производственным образцом или подделкой</string>
     <string name="warning_failed_to_verify_card_title">Проверка подлинности не удалась</string>
     <string name="warning_important_security_info">Важная информация о безопасности %s</string>
     <string name="warning_low_signatures_format">На этой карте осталось только %s подписей. Вы должны вывести все свои средства.</string>
+    <string name="warning_network_unreachable_message">В данный момент сеть недоступна. Пожалуйста, попробуйте позже.</string>
+    <string name="warning_network_unreachable_title">Сеть недоступна.</string>
     <string name="warning_rate_app_message">Как вам Tangem?</string>
     <string name="warning_rate_app_title">Один вопрос</string>
     <string name="warning_signed_tx_previously">Эта карта подписывала транзакции в прошлом</string>
