--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -588,7 +588,7 @@
     <string name="warning_button_love_it">Love it!</string>
     <string name="warning_button_ok">Ok, Got it!</string>
     <string name="warning_button_really_cool">Really cool!</string>
-    <string name="warning_existential_deposit_message">%1$s network has a concept of Existential Deposit. If your account drops below %2$s it will be deactivated and any remaining funds will be destroyed.</string>
+    <string name="warning_existential_deposit_message">%1$s network requires an Existential Deposit. If your account drops below %2$s, it will be deactivated, and any remaining funds will be destroyed.</string>
     <string name="warning_existential_deposit_title">Network requires Existential Deposit</string>
     <string name="warning_failed_to_verify_card_message">This card might be a production sample or counterfeit</string>
     <string name="warning_failed_to_verify_card_title">Authenticity check failed</string>
@@ -596,15 +596,19 @@
     <string name="warning_low_signatures_format">There are only %s signatures available on this card. You must withdraw all of your funds.</string>
     <string name="warning_network_unreachable_message">The network is currently unreachable. Please try again later.</string>
     <string name="warning_network_unreachable_title">Network is unreachable</string>
-    <string name="warning_rate_app_message">How do you like Tangem?</string>
-    <string name="warning_rate_app_title">One question</string>
-    <string name="warning_rate_app_title_new">Rate the app</string>
+    <string name="warning_no_account_title">Top up your wallet</string>
+    <string name="warning_rate_app_message">Your review keeps us motivated to make Tangem Wallet even better</string>
+    <string name="warning_rate_app_title">Enjoying Tangem?</string>
+    <string name="warning_rent_fee_title">Network rent fee required</string>
+    <string name="warning_send_blocked_funds_for_fee_message">%1$s is a token in the %2$s network. To make a %3$s transaction, you must deposit some %4$s (%5$s) to cover the network fee.</string>
+    <string name="warning_send_blocked_funds_for_fee_title">Insufficient %1$s to cover network fee</string>
+    <string name="warning_send_blocked_pending_transactions_message">Sending funds will be available once the %s transaction is complete</string>
     <string name="warning_signed_tx_previously">This card has signed transactions in the past</string>
-    <string name="warning_subtitle_network_unreachable">Network currently is unreachable. Please try again later.</string>
-    <string name="warning_subtitle_some_networks_unreachable">Some networks currently are unreachable. Please try again later.</string>
+    <string name="warning_solana_rent_fee_message">Solana network charges a rent of %1$s every 2 days. Accounts that can\'t afford the rent are purged from the network. Deposit your account with more than %2$s to use it for free.</string>
+    <string name="warning_some_networks_unreachable_message">Some networks currently are unreachable. Please try again later.</string>
+    <string name="warning_some_networks_unreachable_title">Some networks are unreachable</string>
     <string name="warning_testnet_card_message">This is a Testnet card. Don\'t accept it as a payment. This card must only be used for testing and development purposes.</string>
     <string name="warning_title_note_top_up">Note top up</string>
-    <string name="warning_title_some_networks_unreachable">Some networks are unreachable</string>
     <string name="welcome_interrupted_backup_alert_discard">Discard</string>
     <string name="welcome_interrupted_backup_alert_message">You have an interrupted backup. Do you want to resume?</string>
     <string name="welcome_interrupted_backup_alert_resume">Yes, resume</string>
