--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -568,21 +568,26 @@
     <string name="warning_button_learn_more">Узнать больше</string>
     <string name="warning_button_ok">Понятно!</string>
     <string name="warning_button_really_cool">Очень круто!</string>
-    <string name="warning_existential_deposit_message">Сеть %1$s использует концепцию экзистенциального депозита. Если баланс вашего счета опустится ниже %2$s, он будет деактивирован, а все оставшиеся средства будут уничтожены.</string>
-    <string name="warning_existential_deposit_title">Для работы с сетью необходим депозит.</string>
+    <string name="warning_existential_deposit_message">Cеть %1$s использует концепцию экзистенциального депозита. Если баланс вашего счета будет ниже %2$s, то он будет деактивирован, а средства на счете уничтожены.</string>
+    <string name="warning_existential_deposit_title">Для работы с сетью необходим депозит</string>
     <string name="warning_failed_to_verify_card_message">Эта карта может быть производственным образцом или подделкой</string>
     <string name="warning_failed_to_verify_card_title">Проверка подлинности не удалась</string>
     <string name="warning_important_security_info">Важная информация о безопасности %s</string>
     <string name="warning_low_signatures_format">На этой карте осталось только %s подписей. Вы должны вывести все свои средства.</string>
     <string name="warning_network_unreachable_message">В данный момент сеть недоступна. Пожалуйста, попробуйте позже.</string>
-    <string name="warning_network_unreachable_title">Сеть недоступна.</string>
-    <string name="warning_rate_app_message">Как вам Tangem?</string>
-    <string name="warning_rate_app_title">Один вопрос</string>
+    <string name="warning_network_unreachable_title">Сеть недоступна</string>
+    <string name="warning_no_account_title">Пополните ваш кошелек</string>
+    <string name="warning_rate_app_message">Ваш отзыв мотивирует нас сделать кошелек Tangem еще лучше</string>
+    <string name="warning_rate_app_title">Нравится Tangem?</string>
+    <string name="warning_rent_fee_title">Необходима плата за аренду сети</string>
+    <string name="warning_send_blocked_funds_for_fee_message">%1$s - это токен в сети %2$s. Для совершения транзакции %3$s, вам необходимо внести депозит в размере %4$s (%5$s), чтобы покрыть комиссию сети.</string>
+    <string name="warning_send_blocked_funds_for_fee_title">Недостаточно %1$s для оплаты комиссии сети</string>
+    <string name="warning_send_blocked_pending_transactions_message">Отправка средств станет доступной после завершения транзакции %s</string>
     <string name="warning_signed_tx_previously">Эта карта подписывала транзакции в прошлом</string>
-    <string name="warning_subtitle_network_unreachable">В настоящее время сеть недоступна. Пожалуйста, повторите попытку позже.</string>
-    <string name="warning_subtitle_some_networks_unreachable">Некоторые сети в настоящее время недоступны. Пожалуйста, повторите попытку позже.</string>
+    <string name="warning_solana_rent_fee_message">Сеть Solana взимает арендную плату в размере %1$s каждые 2 дня. Аккаунты, которые не могут позволить себе арендную плату, удаляются из сети. Пополните свой счет более чем на %2$s, чтобы не платить арендную плату.</string>
+    <string name="warning_some_networks_unreachable_message">Некоторые сети в настоящее время недоступны. Пожалуйста, повторите попытку позже.</string>
+    <string name="warning_some_networks_unreachable_title">Некоторые сети недоступны</string>
     <string name="warning_testnet_card_message">Это тестовая карта. Не принимайте её в качестве оплаты. Эта карта должна использоваться только в целях тестирования и разработки.</string>
-    <string name="warning_title_some_networks_unreachable">Некоторые сети недоступны</string>
     <string name="welcome_interrupted_backup_alert_discard">Отказаться</string>
     <string name="welcome_interrupted_backup_alert_message">Вы не закончили резервное копирование. Хотите продолжить?</string>
     <string name="welcome_interrupted_backup_alert_resume">Да, возобновить</string>
