--- a/core/res/src/main/res/values-zh-rTW/strings.xml
+++ b/core/res/src/main/res/values-zh-rTW/strings.xml
@@ -7,16 +7,11 @@
     <string name="alert_app_feedback_sent_title">成功送出</string>
     <string name="alert_button_request_support">請求支持</string>
     <string name="alert_button_send_feedback">發送反饋</string>
-    <string name="alert_card_signed_transactions">此卡過去已經充值並簽署過交易。如果您從不受信任的來源收到此卡，請考慮立即提取所有資金。如果是您的卡，則無需擔心</string>
     <string name="alert_demo_feature_disabled">此功能不在展示模式中提供</string>
-    <string name="alert_demo_message">您正在展示模式。所有資產皆不是真的</string>
-    <string name="alert_developer_card">您掃描的卡是開發卡。不要用它作為付款方式</string>
     <string name="alert_failed_to_send_email_title">發送電子郵件失敗</string>
     <string name="alert_failed_to_send_transaction_message">原因：%s</string>
     <string name="alert_failed_to_send_transaction_title">無法發送交易</string>
-    <string name="alert_manage_tokens_addresses_message">請注意代幣在不同的網路有不同的地址。請再次檢查正確的地址</string>
     <string name="alert_manage_tokens_unsupported_message">此卡不支持Solana網路上的代幣因為韌體限制</string>
-    <string name="alert_signed_hashes_message">這張卡不是不記名票據。我們目前無法將卡上的簽名計數與區塊鏈上的信息相匹配。這很正常，但在極少數情況下可能意味著以前的持有人正在阻止離線簽名，這是安全問題。不要接受此卡作為您不信任的人的實物付款。它在所有其他方面都非常安全。Tangem 是唯一提供簽名計數保護的硬件錢包。</string>
     <string name="alert_troubleshooting_scan_card_title">有困難在掃描卡上嗎？</string>
     <string name="alert_unsupported_card">此卡不適用於此app</string>
     <string name="app_settings_enable_biometrics_description">轉到設置以在 Tangem App 中啟用生物識別身份驗證</string>
@@ -166,8 +161,6 @@
     <string name="internal_error_wallet_manager_not_found">內部錯誤：找不到錢包管理器</string>
     <string name="key_invalidated_warning_description">您已更新生物識別登入，掃描您的卡進入</string>
     <string name="main_manage_tokens">管理代幣</string>
-    <string name="main_no_backup_warning_subtitle">為了保護您的資產，我們建議您執行此程序</string>
-    <string name="main_no_backup_warning_title">您的錢包尚未備份</string>
     <string name="main_page_balance">總餘額</string>
     <string name="main_processing_full_amount">該金額不包括您的部分資金</string>
     <string name="main_scan_card_warning_view_subtitle">要訪問所有的網路您需要掃描卡片</string>
@@ -320,7 +313,6 @@
     <string name="shop_one_wallet">Tangem Wallet</string>
     <string name="shop_other_payment_methods">其他付款方式</string>
     <string name="shop_total">總計</string>
-    <string name="solana_rent_warning">Solana 網絡每 2 天收取 %1$s 的費用。無法付此費用的帳戶將從網絡中清除。向您的帳戶存入超過 %2$s 即可免費使用</string>
     <string name="story_awe_description">安全地存儲您的加密貨幣，同時將私鑰保存在您的卡中</string>
     <string name="story_awe_title">創新式的硬體錢包</string>
     <string name="story_backup_description">最多 **3張實體卡片** 到一個錢包</string>
@@ -375,8 +367,6 @@
     <string name="token_details_hide_alert_message">您即將在主屏幕上隱藏此代幣。您可以隨時通過管理代幣頁面將其添加回來。</string>
     <string name="token_details_hide_alert_title">隱藏 %s</string>
     <string name="token_details_hide_token">隱藏代幣</string>
-    <string name="token_details_send_blocked_fee_format">%1$s 是 %2$s 網絡中的代幣， 要進行 %3$s 交易，您需要存入一些 %4$s (%5$s) 以支付網絡費用</string>
-    <string name="token_details_send_blocked_tx_format">請等待 %s 交易完成才能發送資金</string>
     <string name="token_details_unable_hide_alert_message">%1$s 代幣是 %2$s 網絡上的主要貨幣，只要列表中還有該網絡上的其他代幣，它就無法被隱藏。</string>
     <string name="token_details_unable_hide_alert_title">無法隱藏 %s</string>
     <string name="token_item_no_rate">無費用</string>
@@ -406,7 +396,6 @@
     <string name="user_wallet_list_title">我的錢包</string>
     <string name="user_wallet_list_unlock_all_with">用 %s 解鎖全部</string>
     <string name="wallet_address_button_explore">交易記錄</string>
-    <string name="wallet_balance_blockchain_unreachable">網路無法使用</string>
     <string name="wallet_balance_blockchain_unreachable_try_later">區塊鍊無法使用。稍後再試</string>
     <string name="wallet_balance_loading">餘額加載中</string>
     <string name="wallet_balance_missing_derivation">掃描卡片</string>
@@ -465,19 +454,14 @@
     <string name="wallet_pending_tx_sending">發送中</string>
     <string name="wallet_pending_tx_sending_address_format">至%s</string>
     <string name="wallet_title">Tangem</string>
-    <string name="warning_button_can_be_better">可以更好</string>
+    <string name="warning_button_could_be_better">可以更好</string>
     <string name="warning_button_learn_more">了解更多</string>
     <string name="warning_button_ok">了解</string>
     <string name="warning_button_really_cool">真的很酷！</string>
-    <string name="warning_existential_deposit_message">%1$s 網絡有一個 Existential Deposit 的概念。如果您的帳戶低於 %2$s，它將被停用，所有剩餘資金將被銷毀</string>
     <string name="warning_failed_to_verify_card_message">此卡可能是生產樣本或偽造品</string>
     <string name="warning_failed_to_verify_card_title">認證檢查失敗</string>
-    <string name="warning_important_security_info">重要安全信息 %s</string>
-    <string name="warning_low_signatures_format">此卡上只有 %s 個簽名可用。您必須提取所有資金</string>
-    <string name="warning_rate_app_message">你喜歡 Tangem 嗎？</string>
-    <string name="warning_rate_app_title">一個問題</string>
-    <string name="warning_signed_tx_previously">此卡過去曾簽署過交易</string>
-    <string name="warning_testnet_card_message">這是一張測試網卡。不要接受它作為付款。 此卡只能用於測試和開發目的</string>
+    <string name="warning_network_unreachable_title">網路無法使用</string>
+    <string name="warning_solana_rent_fee_message">Solana 網絡每 2 天收取 %1$s 的費用。無法付此費用的帳戶將從網絡中清除。向您的帳戶存入超過 %2$s 即可免費使用</string>
     <string name="welcome_interrupted_backup_alert_discard">捨棄</string>
     <string name="welcome_interrupted_backup_alert_message">您有一個備份中斷了，您想繼續嗎？</string>
     <string name="welcome_interrupted_backup_alert_resume">是的，恢復</string>
