--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -7,17 +7,12 @@
     <string name="alert_app_feedback_sent_title">Отправлено успешно</string>
     <string name="alert_button_request_support">Обратиться в поддержку</string>
     <string name="alert_button_send_feedback">Отправить отзыв</string>
-    <string name="alert_card_signed_transactions">Эта карта ранее пополнялась и подписывала транзакции. Выведите средства как можно быстрее, если вы получили эту карту из ненадежного источника. Если это ваша карта, то не о чем беспокоиться.</string>
     <string name="alert_demo_feature_disabled">Эта функция недоступна в демонстрационном режиме</string>
-    <string name="alert_demo_message">Приложение работает в демонстрационном режиме. Средства на всех счетах ненастоящие.</string>
-    <string name="alert_developer_card">Карта, которую вы отсканировали, является картой разработчика. Не принимайте её в качестве оплаты.</string>
     <string name="alert_failed_to_send_email_title">Не удалось отправить письмо</string>
     <string name="alert_failed_to_send_transaction_message">Причина: %s</string>
     <string name="alert_failed_to_send_transaction_title">Не могу отправить транзакцию</string>
-    <string name="alert_manage_tokens_addresses_message">Внимание! Валюты на разных сетях имеют разные адреса. Убедитесь, что адрес соответствует сети, в которой вы отправляете средства.</string>
     <string name="alert_manage_tokens_unsupported_curve_message">Для активации криптографии сети %1$s необходимо сбросить кошелек до заводских настроек. Пожалуйста, выведите свои средства, чтобы не потерять их, после сброса доступ к текущему кошельку будет невозможен.</string>
     <string name="alert_manage_tokens_unsupported_message">Токены в сети Solana не поддерживаются этой картой из-за ограничений прошивки.</string>
-    <string name="alert_signed_hashes_message">Эта карта не является платежным средством. В настоящее время мы не можем сопоставить количество подписей на карте с информацией в блокчейне. Это нормально, но в редких случаях может означать, что предыдущий владелец удерживает подписанную транзакцию от публикации, что является поводом для беспокойства.\nНе принимайте эту карту в качестве физического платежа от кого-то, кому вы не доверяете.\nВо всех остальных отношениях эта карта совершенно безопасна.\nTangem — единственный аппаратный кошелек, предлагающий защиту методом подсчета подписей.</string>
     <string name="alert_troubleshooting_scan_card_title">У вас возникли трудности со сканированием карты?</string>
     <string name="alert_unsupported_card">Эта карта не предназначена для работы с этим приложением</string>
     <string name="app_settings_enable_biometrics_description">Перейдите в настройки, чтобы включить биометрическую аутентификацию в приложении Tangem</string>
@@ -63,6 +58,7 @@
     <string name="chat_user_actions_title">Пожалуйста, выберите действие</string>
     <string name="chat_user_rate_agent_title">Пожалуйста, оцените работу агента</string>
     <string name="common_accept">Принять</string>
+    <string name="common_access_denied">Доступ запрещен</string>
     <string name="common_add">Добавить</string>
     <string name="common_apply">Применить</string>
     <string name="common_approval">Одобрение</string>
@@ -123,7 +119,6 @@
     <string name="common_transactions">Транзакции</string>
     <string name="common_transfer">Перевод</string>
     <string name="common_understand">Я понял</string>
-    <string name="common_unlock_needed">Необходима разблокировка</string>
     <string name="common_unreachable">Недоступно</string>
     <string name="common_yes">Да</string>
     <string name="contract_address_copied_message">Адрес контракта скопирован!</string>
@@ -202,25 +197,14 @@
         <item quantity="other">Пройдите 3 урока и получите %d 1INCH токенов на свой кошелек</item>
     </plurals>
     <string name="main_manage_tokens">Управление токенами</string>
-    <string name="main_no_backup_warning_subtitle">Чтобы защитить свои активы, мы советуем вам выполнить эту процедуру</string>
-    <string name="main_no_backup_warning_title">Резервное копирование не выполнено</string>
     <string name="main_page_balance">Баланс</string>
     <string name="main_processing_full_amount">В сумме учтены не все монеты</string>
     <string name="main_promotion_credited">1INCH токены будут зачислены на адрес вашего кошелька в сети %s в течение 48 часов</string>
     <string name="main_scan_card_warning_view_subtitle">Чтобы получить доступ ко всем сетям, вам необходимо отсканировать карту</string>
     <string name="main_scan_card_warning_view_title">Отсканируйте карту</string>
     <string name="main_tokens">Токены</string>
-    <plurals name="main_warning_missing_derivation_description">
-        <item quantity="one">Вам надо сгенерировать адрес для %d новой сети, используя вашу карту</item>
-        <item quantity="few">Вам надо сгенерировать адреса для %d новых сетей, используя вашу карту</item>
-        <item quantity="many">Вам надо сгенерировать адреса для %d новых сетей, используя вашу карту</item>
-        <item quantity="other">Вам надо сгенерировать адреса для %d новых сетей, используя вашу карту</item>
-    </plurals>
-    <string name="main_warning_missing_derivation_title">Некоторые адреса отсутствуют</string>
     <string name="manage_tokens_add">Добавить</string>
     <string name="manage_tokens_edit">Изменить</string>
-    <string name="notification_subtitle_not_enough_funds">Чтобы отправить транзакцию %1$s, необходимо пополнить баланс %2$s (%3$s) для оплаты комиссии сети</string>
-    <string name="notification_title_not_enough_funds">Невозможно покрыть %1$s комиссию</string>
     <string name="onboarding_access_code_feature_1_description">Вам необходимо установить единый код доступа для защиты всех ваших карт</string>
     <string name="onboarding_access_code_feature_1_title">Защита</string>
     <string name="onboarding_access_code_feature_2_description">Позже вы сможете установить индивидуальный код доступа для каждой карты</string>
@@ -398,7 +382,6 @@
     <string name="shop_other_payment_methods">Другие способы оплаты</string>
     <string name="shop_pre_order_now">Сделать предзаказ</string>
     <string name="shop_total">Итого</string>
-    <string name="solana_rent_warning">Сеть Solana взимает арендную плату в размере %1$s каждые 2 дня. Аккаунты, которые не могут позволить себе арендную плату, удаляются из сети. Пополните свой счет более чем на %2$s, чтобы не платить арендную плату.</string>
     <string name="story_awe_description">Держите свои криптосбережения в безопасности. Приватные ключи надежно хранятся на карте.</string>
     <string name="story_awe_title">Революционный аппаратный кошелек</string>
     <string name="story_backup_description">До **трех карт** с одним кошельком</string>
@@ -462,8 +445,6 @@
     <string name="token_details_hide_alert_message">Вы скрываете токен с главного экрана, но в любой момент сможете добавить его обратно через страницу управления токенами.</string>
     <string name="token_details_hide_alert_title">Скрыть %s</string>
     <string name="token_details_hide_token">Скрыть токен</string>
-    <string name="token_details_send_blocked_fee_format">%1$s — это токен в сети %2$s. Чтобы отправить транзакцию %3$s, необходимо пополнить баланс %4$s (%5$s) для оплаты комиссии сети.</string>
-    <string name="token_details_send_blocked_tx_format">Пожалуйста, дождитесь завершения транзакции %s, чтобы иметь возможность отправить средства</string>
     <string name="token_details_token_type_subtitle">%1$s токен в сети %%image%% %2$s</string>
     <string name="token_details_unable_hide_alert_message">Токен %1$s является основной валютой в сети %2$s и не может быть скрыт до тех пор, пока у вас в списке есть другие токены этой сети.</string>
     <string name="token_details_unable_hide_alert_title">Невозможно скрыть %s</string>
@@ -488,7 +469,6 @@
     <string name="twins_recreate_warning">Это действие необратимо. У вас не будет доступа к старому кошельку.</string>
     <string name="twins_scan_twin_with_number">Приложите twin-карту с номером %s и не убирайте до окончания операции</string>
     <string name="unlock_wallet_description_full">Используйте %s или отсканируйте карту, чтобы получить доступ к своему кошельку</string>
-    <string name="unlock_wallet_description_short">Используйте %s или отсканируйте карту</string>
     <string name="user_wallet_list_add_button">Добавить новый кошелек</string>
     <string name="user_wallet_list_delete_prompt">Вы уверены, что хотите удалить этот кошелек?</string>
     <string name="user_wallet_list_editing_count">%d выбрано</string>
@@ -502,7 +482,6 @@
     <string name="user_wallet_list_unlock_all">Разблокировать все</string>
     <string name="user_wallet_list_unlock_all_with">Разблокировать все с %s</string>
     <string name="wallet_address_button_explore">История транзакций</string>
-    <string name="wallet_balance_blockchain_unreachable">Сеть недоступна</string>
     <string name="wallet_balance_blockchain_unreachable_try_later">Блокчейн недоступен. Попробуйте позже.</string>
     <string name="wallet_balance_loading">Баланс загружается…</string>
     <string name="wallet_balance_missing_derivation">Отсканируйте карту</string>
@@ -564,30 +543,49 @@
     <string name="wallet_pending_tx_sending">Отправка</string>
     <string name="wallet_pending_tx_sending_address_format">к %s</string>
     <string name="wallet_title">Tangem</string>
-    <string name="warning_button_can_be_better">Можно лучше</string>
+    <string name="warning_access_denied_message">Используйте %s или отсканируйте карту, чтобы разблокировать доступ к вашему кошельку</string>
+    <string name="warning_button_could_be_better">Можно лучше</string>
     <string name="warning_button_learn_more">Узнать больше</string>
+    <string name="warning_button_like_it">Нравится</string>
     <string name="warning_button_ok">Понятно!</string>
     <string name="warning_button_really_cool">Очень круто!</string>
+    <string name="warning_demo_mode_message">Вы находитесь в режиме демо</string>
+    <string name="warning_demo_mode_title">Демо режим включен</string>
+    <string name="warning_developer_card_message">Отсканированная вами карта является картой разработчика. Не используйте ее для создания своего кошелька.</string>
+    <string name="warning_developer_card_title">Не для пользователя!</string>
     <string name="warning_existential_deposit_message">Cеть %1$s использует концепцию экзистенциального депозита. Если баланс вашего счета будет ниже %2$s, то он будет деактивирован, а средства на счете уничтожены.</string>
     <string name="warning_existential_deposit_title">Для работы с сетью необходим депозит</string>
-    <string name="warning_failed_to_verify_card_message">Эта карта может быть производственным образцом или подделкой</string>
-    <string name="warning_failed_to_verify_card_title">Проверка подлинности не удалась</string>
-    <string name="warning_important_security_info">Важная информация о безопасности %s</string>
-    <string name="warning_low_signatures_format">На этой карте осталось только %s подписей. Вы должны вывести все свои средства.</string>
+    <string name="warning_failed_to_verify_card_message">Возможно, данная карта - образец или подделка</string>
+    <string name="warning_failed_to_verify_card_title">Ошибка проверки подлинности</string>
+    <string name="warning_low_signatures_message">На этой карте осталось всего %s подписей. Вам следует вывести все ваши средства.</string>
+    <string name="warning_low_signatures_title">Малое количество подписей</string>
+    <string name="warning_manage_tokens_legacy_derivation_message">Токены на разных сетях могут иметь разные адреса. Пожалуйста, убедитесь при переводе средств, что ваш адрес соответствует сети.</string>
+    <plurals name="warning_missing_derivation_message">
+        <item quantity="one">Используйте вашу карту, чтобы сгенерировать адрес для %d новой сети</item>
+        <item quantity="few">Используйте вашу карту, чтобы сгенерировать адреса для %d новых сетей</item>
+        <item quantity="many">Используйте вашу карту, чтобы сгенерировать адреса для %d новых сетей</item>
+        <item quantity="other">Используйте вашу карту, чтобы сгенерировать адреса для %d новых сетей</item>
+    </plurals>
+    <string name="warning_missing_derivation_title">Некоторые адреса отсутствуют</string>
     <string name="warning_network_unreachable_message">В данный момент сеть недоступна. Пожалуйста, попробуйте позже.</string>
     <string name="warning_network_unreachable_title">Сеть недоступна</string>
     <string name="warning_no_account_title">Пополните ваш кошелек</string>
+    <string name="warning_no_backup_message">Ваш кошелек не имеет резервной копии. Проведите эту процедуру сейчас, чтобы защитить ваши активы.</string>
+    <string name="warning_no_backup_title">Резервная копия отсутствует</string>
+    <string name="warning_number_of_signed_hashes_incorrect_message">Эта карта ранее использовалась для подписи транзакций. Если она получена от ненадежного источника, рассмотрите возможность вывода своих средств. Если это ваша карта, дополнительных действий не требуется.</string>
+    <string name="warning_number_of_signed_hashes_incorrect_title">Карта уже подписывала транзакции</string>
+    <string name="warning_old_device_old_card_title">Устройство несовместимо</string>
     <string name="warning_rate_app_message">Ваш отзыв мотивирует нас сделать кошелек Tangem еще лучше</string>
     <string name="warning_rate_app_title">Нравится Tangem?</string>
     <string name="warning_rent_fee_title">Необходима плата за аренду сети</string>
     <string name="warning_send_blocked_funds_for_fee_message">%1$s - это токен в сети %2$s. Для совершения транзакции %3$s, вам необходимо внести депозит в размере %4$s (%5$s), чтобы покрыть комиссию сети.</string>
     <string name="warning_send_blocked_funds_for_fee_title">Недостаточно %1$s для оплаты комиссии сети</string>
     <string name="warning_send_blocked_pending_transactions_message">Отправка средств станет доступной после завершения транзакции %s</string>
-    <string name="warning_signed_tx_previously">Эта карта подписывала транзакции в прошлом</string>
     <string name="warning_solana_rent_fee_message">Сеть Solana взимает арендную плату в размере %1$s каждые 2 дня. Аккаунты, которые не могут позволить себе арендную плату, удаляются из сети. Пополните свой счет более чем на %2$s, чтобы не платить арендную плату.</string>
     <string name="warning_some_networks_unreachable_message">Некоторые сети в настоящее время недоступны. Пожалуйста, повторите попытку позже.</string>
     <string name="warning_some_networks_unreachable_title">Некоторые сети недоступны</string>
-    <string name="warning_testnet_card_message">Это тестовая карта. Не принимайте её в качестве оплаты. Эта карта должна использоваться только в целях тестирования и разработки.</string>
+    <string name="warning_testnet_card_message">Это Testnet карта. Он не может обрабатывать транзакции и используется только в целях тестирования и разработки.</string>
+    <string name="warning_testnet_card_title">Только для целей тестирования</string>
     <string name="welcome_interrupted_backup_alert_discard">Отказаться</string>
     <string name="welcome_interrupted_backup_alert_message">Вы не закончили резервное копирование. Хотите продолжить?</string>
     <string name="welcome_interrupted_backup_alert_resume">Да, возобновить</string>
@@ -599,5 +597,4 @@
     <string name="welcome_unlock_card">Сканировать карту</string>
     <string name="welcome_unlock_description">Используйте %s или отсканируйте карту для входа в приложение</string>
     <string name="welcome_unlock_title">C возвращением!</string>
-    <string name="token_details_choose_address">Выберите адрес</string>
 </resources>
