--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -7,17 +7,12 @@
     <string name="alert_app_feedback_sent_title">Sent successfully</string>
     <string name="alert_button_request_support">Request support</string>
     <string name="alert_button_send_feedback">Send feedback</string>
-    <string name="alert_card_signed_transactions">This card has been already topped up and signed transactions in the past. Consider immediate withdrawal of all funds if you have received this card from an untrusted source. If it\'s your card, there is nothing to worry about.</string>
     <string name="alert_demo_feature_disabled">This feature is disabled in Demo mode</string>
-    <string name="alert_demo_message">You are currently running in Demo mode. All funds are not real.</string>
-    <string name="alert_developer_card">The card you scanned is a development card. Don\'t accept it as a payment.</string>
     <string name="alert_failed_to_send_email_title">Failed to send the email</string>
     <string name="alert_failed_to_send_transaction_message">Reason: %s</string>
     <string name="alert_failed_to_send_transaction_title">Can\'t send a transaction</string>
-    <string name="alert_manage_tokens_addresses_message">Note that tokens on different networks have different addresses. Double check that your address matches the network when you transfer funds.</string>
     <string name="alert_manage_tokens_unsupported_curve_message">To activate the %1$s blockchain\'s cryptographic encryption, you\'ll need to reset the wallet to factory settings. Please withdraw your funds before doing so to ensure that you don\'t lose them, and then complete the reset process. Access to the current wallet will not be possible after the reset.</string>
     <string name="alert_manage_tokens_unsupported_message">Tokens in Solana network are not supported by this card due to firmware limitation.</string>
-    <string name="alert_signed_hashes_message">This card is not a bearer note. We can\'t currently match the signature count on the card with the information on the blockchain. This is normal but in rare cases can mean a previous holder is holding back an offline signature, which is a security concern.\nDo not accept this card as physical payment from someone you don\'t trust.\nIt\'s perfectly safe in all other respects.\nTangem is the only hardware wallet to offer signature count protection.</string>
     <string name="alert_troubleshooting_scan_card_title">Are you having difficulty scanning your card?</string>
     <string name="alert_unsupported_card">This card is not designed to work with this app</string>
     <string name="app_settings_enable_biometrics_description">Go to settings to enable biometric authentication in the Tangem App</string>
@@ -61,6 +56,7 @@
     <string name="chat_user_actions_title">Please select an action</string>
     <string name="chat_user_rate_agent_title">Please, rate the work of the agent</string>
     <string name="common_accept">Accept</string>
+    <string name="common_access_denied">Access denied</string>
     <string name="common_add">Add</string>
     <string name="common_apply">Apply</string>
     <string name="common_approval">Approval</string>
@@ -119,10 +115,10 @@
     <string name="common_success">Success</string>
     <string name="common_swap">Swap</string>
     <string name="common_terms_and_conditions">terms and conditions</string>
+    <string name="common_transaction_failed">Transaction failed</string>
     <string name="common_transactions">Transactions</string>
     <string name="common_transfer">Transfer</string>
     <string name="common_understand">I understand</string>
-    <string name="common_unlock_needed">Unlock needed</string>
     <string name="common_unreachable">Unreachable</string>
     <string name="common_yes">Yes</string>
     <string name="contract_address_copied_message">Contract address copied!</string>
@@ -206,19 +202,12 @@
         <item quantity="other">Complete three lessons and receive %d 1INCH tokens to your wallet</item>
     </plurals>
     <string name="main_manage_tokens">Manage tokens</string>
-    <string name="main_no_backup_warning_subtitle">To protect your assets, we advise you to carry out this procedure</string>
-    <string name="main_no_backup_warning_title">Your wallet hasn\'t been backed up</string>
     <string name="main_page_balance">Total balance</string>
     <string name="main_processing_full_amount">The amount does not include some of your funds</string>
     <string name="main_promotion_credited">1INCH tokens will be credited to your %s wallet address within 48 hours</string>
     <string name="main_scan_card_warning_view_subtitle">To access all the networks you need to scan the card</string>
     <string name="main_scan_card_warning_view_title">Scan your card</string>
     <string name="main_tokens">Tokens</string>
-    <plurals name="main_warning_missing_derivation_description">
-        <item quantity="one">You need to generate address for %d new network using your card</item>
-        <item quantity="other">You need to generate addresses for %d new networks using your card</item>
-    </plurals>
-    <string name="main_warning_missing_derivation_title">Some addresses are missing</string>
     <string name="manage_tokens_add">Add</string>
     <string name="manage_tokens_custom">Custom</string>
     <string name="manage_tokens_edit">Edit</string>
@@ -242,8 +231,6 @@
     <string name="manage_tokens_unavailable_description">The selected token is currently unavailable for actions within the crypto wallet. But worry not, you can express your interest by upvoting it.</string>
     <string name="manage_tokens_unavailable_vote">Upvote</string>
     <string name="manage_tokens_wallet_selector_title">Choose wallet</string>
-    <string name="notification_subtitle_not_enough_funds">To make a %1$s transaction you need to deposit some %2$s (%3$s) to cover the network fee</string>
-    <string name="notification_title_not_enough_funds">Unable to cover %1$s fee</string>
     <string name="onboarding_access_code_feature_1_description">You have to set up a single access code to protect all your wallets</string>
     <string name="onboarding_access_code_feature_1_title">Protect</string>
     <string name="onboarding_access_code_feature_2_description">You can set up an individual access code on each card later</string>
@@ -418,7 +405,6 @@
     <string name="shop_other_payment_methods">Other payment methods</string>
     <string name="shop_pre_order_now">Pre-order now</string>
     <string name="shop_total">Total</string>
-    <string name="solana_rent_warning">Solana network charges a rent of %1$s every 2 days. Accounts that can\'t afford the rent are purged from the network. Deposit your account with more than %2$s to use it for free.</string>
     <string name="story_awe_description">Store your crypto assets secure while keeping private keys contained in your card</string>
     <string name="story_awe_title">Revolutionary Hardware Wallet</string>
     <string name="story_backup_description">Up to **3 physical cards** to one wallet</string>
@@ -481,8 +467,6 @@
     <string name="token_details_hide_alert_message">You are about to hide this token from the main screen. You can add it back anytime through the manage tokens page.</string>
     <string name="token_details_hide_alert_title">Hide %s</string>
     <string name="token_details_hide_token">Hide token</string>
-    <string name="token_details_send_blocked_fee_format">%1$s is a token in the %2$s network. To make a %3$s transaction you need to deposit some %4$s (%5$s) to cover the network fee.</string>
-    <string name="token_details_send_blocked_tx_format">Please wait for %s transaction to complete to be able to send funds</string>
     <string name="token_details_token_type_subtitle">%1$s token in %%image%% %2$s network</string>
     <string name="token_details_unable_hide_alert_message">The %1$s token is the main currency on the %2$s network and cannot be hidden as long as you have other tokens on this network in the list.</string>
     <string name="token_details_unable_hide_alert_title">Unable to hide %s</string>
@@ -507,7 +491,6 @@
     <string name="twins_recreate_warning">This action is irreversible. You will not have access to the old wallet.</string>
     <string name="twins_scan_twin_with_number">Tap the twin card with number %s and do not remove until the end of the operation</string>
     <string name="unlock_wallet_description_full">Use %s or scan a card to have an access to your wallet</string>
-    <string name="unlock_wallet_description_short">Use %s or scan a card</string>
     <string name="user_wallet_list_add_button">Add new wallet</string>
     <string name="user_wallet_list_delete_prompt">Are you sure you want to delete this wallet?</string>
     <string name="user_wallet_list_editing_count">%d selected</string>
@@ -521,7 +504,6 @@
     <string name="user_wallet_list_unlock_all">Unlock all</string>
     <string name="user_wallet_list_unlock_all_with">Unlock all with %s</string>
     <string name="wallet_address_button_explore">Transaction history</string>
-    <string name="wallet_balance_blockchain_unreachable">Network is unreachable</string>
     <string name="wallet_balance_blockchain_unreachable_try_later">Blockchain is unreachable. Try later</string>
     <string name="wallet_balance_loading">Balance is loading…</string>
     <string name="wallet_balance_missing_derivation">Scan the card</string>
@@ -583,31 +565,47 @@
     <string name="wallet_pending_tx_sending">Sending</string>
     <string name="wallet_pending_tx_sending_address_format">to %s</string>
     <string name="wallet_title">Tangem</string>
-    <string name="warning_button_can_be_better">Can be better</string>
+    <string name="warning_access_denied_message">Use %s or scan a card to unlock access to your wallet</string>
+    <string name="warning_button_could_be_better">Could be better</string>
     <string name="warning_button_learn_more">Learn more</string>
-    <string name="warning_button_love_it">Love it!</string>
+    <string name="warning_button_like_it">Like it</string>
     <string name="warning_button_ok">Ok, Got it!</string>
     <string name="warning_button_really_cool">Really cool!</string>
+    <string name="warning_demo_mode_message">You are currently in the Demo mode</string>
+    <string name="warning_demo_mode_title">Demo mode active</string>
+    <string name="warning_developer_card_message">The card you scanned is a developer card. Do not use it to create your wallet.</string>
+    <string name="warning_developer_card_title">Not for users!</string>
     <string name="warning_existential_deposit_message">%1$s network requires an Existential Deposit. If your account drops below %2$s, it will be deactivated, and any remaining funds will be destroyed.</string>
     <string name="warning_existential_deposit_title">Network requires Existential Deposit</string>
     <string name="warning_failed_to_verify_card_message">This card might be a production sample or counterfeit</string>
     <string name="warning_failed_to_verify_card_title">Authenticity check failed</string>
-    <string name="warning_important_security_info">Important security information %s</string>
-    <string name="warning_low_signatures_format">There are only %s signatures available on this card. You must withdraw all of your funds.</string>
+    <string name="warning_low_signatures_message">Only %s signatures are left on this card. You must withdraw all of your funds.</string>
+    <string name="warning_low_signatures_title">Low signature count</string>
+    <string name="warning_manage_tokens_legacy_derivation_message">Tokens on different networks can have different addresses. Double-check that your address matches the network when you transfer funds.</string>
+    <plurals name="warning_missing_derivation_message">
+        <item quantity="one">Use your card to generate an address for %d new network</item>
+        <item quantity="other">Use your card to generate an addresses for %d new networks</item>
+    </plurals>
+    <string name="warning_missing_derivation_title">Some addresses are missing</string>
     <string name="warning_network_unreachable_message">The network is currently unreachable. Please try again later.</string>
     <string name="warning_network_unreachable_title">Network is unreachable</string>
     <string name="warning_no_account_title">Top up your wallet</string>
+    <string name="warning_no_backup_message">Your wallet hasn\'t been backed up. Carry out this procedure to protect your assets now.</string>
+    <string name="warning_no_backup_title">Missing backup</string>
+    <string name="warning_number_of_signed_hashes_incorrect_message">This card has been previously used for transactions. If received from an untrusted source, consider withdrawing all funds. If it\'s your card, no action is required.</string>
+    <string name="warning_number_of_signed_hashes_incorrect_title">Card has already signed transactions</string>
+    <string name="warning_old_device_old_card_title">Device incompatibility detected</string>
     <string name="warning_rate_app_message">Your review keeps us motivated to make Tangem Wallet even better</string>
     <string name="warning_rate_app_title">Enjoying Tangem?</string>
     <string name="warning_rent_fee_title">Network rent fee required</string>
     <string name="warning_send_blocked_funds_for_fee_message">%1$s is a token in the %2$s network. To make a %3$s transaction, you must deposit some %4$s (%5$s) to cover the network fee.</string>
     <string name="warning_send_blocked_funds_for_fee_title">Insufficient %1$s to cover network fee</string>
     <string name="warning_send_blocked_pending_transactions_message">Sending funds will be available once the %s transaction is complete</string>
-    <string name="warning_signed_tx_previously">This card has signed transactions in the past</string>
     <string name="warning_solana_rent_fee_message">Solana network charges a rent of %1$s every 2 days. Accounts that can\'t afford the rent are purged from the network. Deposit your account with more than %2$s to use it for free.</string>
     <string name="warning_some_networks_unreachable_message">Some networks currently are unreachable. Please try again later.</string>
     <string name="warning_some_networks_unreachable_title">Some networks are unreachable</string>
-    <string name="warning_testnet_card_message">This is a Testnet card. Don\'t accept it as a payment. This card must only be used for testing and development purposes.</string>
+    <string name="warning_testnet_card_message">This is a Testnet card. It cannot process transactions and should only be used for testing and development purposes.</string>
+    <string name="warning_testnet_card_title">For testing purposes only</string>
     <string name="welcome_interrupted_backup_alert_discard">Discard</string>
     <string name="welcome_interrupted_backup_alert_message">You have an interrupted backup. Do you want to resume?</string>
     <string name="welcome_interrupted_backup_alert_resume">Yes, resume</string>
