--- a/core/res/src/main/res/values-zh-rTW/strings.xml
+++ b/core/res/src/main/res/values-zh-rTW/strings.xml
@@ -323,7 +323,7 @@
     <string name="solana_rent_warning">Solana 網絡每 2 天收取 %1$s 的費用。無法付此費用的帳戶將從網絡中清除。向您的帳戶存入超過 %2$s 即可免費使用</string>
     <string name="story_awe_description">安全地存儲您的加密貨幣，同時將私鑰保存在您的卡中</string>
     <string name="story_awe_title">創新式的硬體錢包</string>
-    <string name="story_backup_description">最多 **3張實體卡片** 到一個錢包</string>
+    <string name="story_backup_description">最多 3張實體卡片 到一個錢包</string>
     <string name="story_backup_description_1">最多</string>
     <string name="story_backup_description_2_bold">3張實體卡片</string>
     <string name="story_backup_description_3">到一個錢包</string>
